# Scrabble

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle  versions.props
.baseline/copyright/: 001_apache-2.0.txt
gradle/wrapper/: gradle-wrapper.properties
scrabble/: build.gradle
scrabble/src/main/java/com/github/nlegroux/scrabble/: Bag.java  BagImpl.java  Dictionaries.java  Dictionary.java  DictionaryImpl.java  Grid.java  GridElement.java  GridImpl.java  GridRow.java  GridRowWritable.java  LetterDistribution.java  LetterDistributions.java  ScrabbleLetter.java  Trie.java  TrieImpl.java  Tries.java
scrabble/src/test/java/com/github/nlegroux/scrabble/: BagImplTest.java  DictionaryImplTest.java  GridImplTest.java  LetterDistributionsTest.java  ScrabbleLetterTest.java  TrieTest.java
src/: Scrabble.cpp  ScrabbleConstants.hpp  ScrabbleGrid.cpp  ScrabbleGrid.hpp  ScrabbleGridElement.cpp  ScrabbleGridElement.hpp  ScrabbleGridWidget.cpp  ScrabbleGridWidget.hpp  ScrabbleMain.cpp  ScrabbleMain.hpp  ScrabblePlayer.cpp  ScrabblePlayer.hpp  ScrabbleRack.cpp  ScrabbleRack.hpp  ScrabbleRackWidget.cpp  ScrabbleRackWidget.hpp  Trie.cpp  Trie.hpp
